--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -189,7 +189,7 @@
                      <th class="text-center table-borderless px-0">Categoria</th>
                      <th class="text-center table-borderless px-0">Estoque</th>
                      <th class="text-center table-borderless px-0">Conservação</th>
-                     <th class="text-center table-borderless px-0">Doc De Origem</th>
+                     <th class="text-center table-borderless px-0">Doc de Origem</th>
                      <th class="text-center table-borderless px-0">Valor</th>
                      <th class="text-center table-borderless px-0">Ações</th>
                   </tr>
